--- a/kamaleeswary.github.io1/index.html
+++ b/kamaleeswary.github.io1/index.html
@@ -37,7 +37,7 @@
               </ul>
             </div>
         </li>
-               <li class="nav-item"><a class="nav-link"  href="#">Latest Update</a></li>
+               <li class="nav-item"><a class="nav-link"  href="#">Update</a></li>
                <li class="nav-item"><a class="nav-link"  href="#">Contact Us</a></li>
             </ul>
      </div>
